[gd_scene load_steps=34 format=3 uid="uid://bs3d5i8crch84"]

[ext_resource type="Texture2D" uid="uid://bwn7ygyb0odym" path="res://assets/images/textures/cubes/cube.png" id="1_kmqy5"]
[ext_resource type="Script" path="res://scenes/characters/player/player.gd" id="1_mfave"]
[ext_resource type="Curve" uid="uid://b4gxfw82qvdds" path="res://scenes/characters/player/curves/DashSpeedCurve.tres" id="2_ou0dm"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_o6cun"]
[ext_resource type="Curve" uid="uid://bvfqik0okq6ni" path="res://scenes/characters/player/curves/ClimbResistanceCurve.tres" id="3_tgmky"]
[ext_resource type="Script" path="res://scenes/characters/player/timers/DashingTimer.gd" id="3_u26qj"]
[ext_resource type="Material" uid="uid://cbnc41iyr8fjq" path="res://scenes/characters/player/materials/pixel_destorsion.tres" id="4_fkpy4"]
[ext_resource type="Script" path="res://scenes/characters/player/timers/ClimbingTimer.gd" id="4_mvqst"]
[ext_resource type="Script" path="res://scenes/characters/player/timers/CoyoteTimer.gd" id="5_jy4sq"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="5_uoeii"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="6_gsiui"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="7_2mu1g"]
[ext_resource type="Script" path="res://scripts/characters/player/sounds/sound_manager.gd" id="7_shnfj"]
[ext_resource type="AudioStream" uid="uid://e2lx04mmn2fx" path="res://assets/audio/sfx/behavior/movement/dash/dash.wav" id="8_xcwp1"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="10_3q06q"]
[ext_resource type="AudioStream" uid="uid://djx80hk3muw1f" path="res://assets/audio/sfx/behavior/movement/dash/midair_dash.wav" id="10_635kx"]
[ext_resource type="AudioStream" uid="uid://bw38losyq8xfy" path="res://assets/audio/sfx/behavior/movement/dash/wall_dash.wav" id="11_i6b7g"]
[ext_resource type="AudioStream" uid="uid://bpgx1eqplsawe" path="res://assets/audio/sfx/behavior/movement/jump/jump.wav" id="12_f8xjn"]
[ext_resource type="AudioStream" uid="uid://4wb7gqumsfou" path="res://assets/audio/sfx/behavior/movement/jump/coyote_jump.wav" id="13_d50lt"]
[ext_resource type="AudioStream" uid="uid://cc8bhj7o714y2" path="res://assets/audio/sfx/behavior/movement/jump/bunny_hop.wav" id="14_y1g2t"]
[ext_resource type="AudioStream" uid="uid://fpcfwpt25ykl" path="res://assets/audio/sfx/behavior/movement/jump/wall_jump.wav" id="15_qpe33"]
[ext_resource type="Shader" path="res://assets/shaders/lighting.gdshader" id="15_umysy"]
[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="16_3mc08"]
[ext_resource type="AudioStream" uid="uid://bq64cu5g0j50m" path="res://assets/audio/sfx/behavior/player_death_sound.wav" id="16_vaxs0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lyo8e"]
shader = ExtResource("15_umysy")
shader_parameter/effect_color = Color(0.2, 0.3, 0.8, 1)
shader_parameter/octave_count = 10
shader_parameter/speed = 5.0
shader_parameter/initial_amplitude = 0.5
shader_parameter/gain = 0.5
shader_parameter/frequency = 2.0
shader_parameter/min_lighting_width = 0.0
shader_parameter/max_lighting_width = 0.05
shader_parameter/alpha_cut_off = 0.3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ony1w"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3eunv"]
size = Vector2(15, 15)

[sub_resource type="Animation" id="Animation_e36qb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_e71wt"]
resource_name = "player_death"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(6.72717, 0.0426889),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_aot4q"]
resource_name = "player_spawn"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:material:shader_parameter/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3hd3"]
_data = {
"RESET": SubResource("Animation_e36qb"),
"player_death": SubResource("Animation_e71wt"),
"player_spawn": SubResource("Animation_aot4q")
}

[sub_resource type="SystemFont" id="SystemFont_imhab"]
font_names = PackedStringArray("Consolas")
subpixel_positioning = 0

[sub_resource type="GDScript" id="GDScript_07sij"]
script/source = "extends Label

@export var target: Player

func _ready():
	assert(target != null, \"Target player has to be set\")

func _process(_delta):
	_update_debug_label()

func _update_debug_label():
	if not target: return

	text = \"\"\"Dashing Progress:  %.3f
	Climbing Progress: %.3f
	Coyote Progress: %.3f
	Velocity: [%.3f, %.3f]
	Ask for jump: %s
	Ask for dash: %s
	\"\"\" % [
		target.dashing_timer.progress(),
		target.climbing_timer.progress(),
		target.coyote_timer.progress(),
		target.velocity.x, target.velocity.y,
		str(target.ask_for_jump),
		str(target.ask_for_dash)
	]
"

[node name="player" type="CharacterBody2D"]
process_mode = 1
collision_mask = 3
safe_margin = 0.1
script = ExtResource("1_mfave")
max_dash_count = 2
dash_speed_curve = ExtResource("2_ou0dm")
climb_resistance_curve = ExtResource("3_tgmky")

[node name="sprite" type="Sprite2D" parent="."]
material = ExtResource("4_fkpy4")
position = Vector2(0, 2.38419e-07)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_kmqy5")

[node name="VFX" type="Node2D" parent="."]

[node name="BrokenLightings" type="ColorRect" parent="VFX"]
visible = false
material = SubResource("ShaderMaterial_lyo8e")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_ony1w")
debug_color = Color(0.952941, 0.145098, 0.423529, 0.419608)

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3eunv")

[node name="RayToBottom" type="RayCast2D" parent="PlayerCollision"]
position = Vector2(0, 8)
target_position = Vector2(0, 11)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="SoundManager" type="Node2D" parent="." node_paths=PackedStringArray("ground_dash", "coyote_dash", "mid_air_dash", "wall_dash", "ground_jump", "coyote_jump", "mid_air_jump", "wall_jump", "disabling", "assembling", "destroying")]
script = ExtResource("7_shnfj")
ground_dash = NodePath("Movement/Dash/Ground")
coyote_dash = NodePath("Movement/Dash/Coyote")
mid_air_dash = NodePath("Movement/Dash/MidAir")
wall_dash = NodePath("Movement/Dash/Wall")
ground_jump = NodePath("Movement/Jump/Ground")
coyote_jump = NodePath("Movement/Jump/Coyote")
mid_air_jump = NodePath("Movement/Jump/MidAir")
wall_jump = NodePath("Movement/Jump/Wall")
disabling = NodePath("Behaviour/Disabled")
assembling = NodePath("Behaviour/Assembled")
destroying = NodePath("Behaviour/Destroyed")

[node name="Movement" type="Node" parent="SoundManager"]

[node name="Dash" type="Node" parent="SoundManager/Movement"]

[node name="Ground" type="AudioStreamPlayer" parent="SoundManager/Movement/Dash"]
stream = ExtResource("8_xcwp1")
bus = &"player_movement"

[node name="Coyote" type="AudioStreamPlayer" parent="SoundManager/Movement/Dash"]
stream = ExtResource("10_635kx")
bus = &"player_movement"

[node name="MidAir" type="AudioStreamPlayer" parent="SoundManager/Movement/Dash"]
stream = ExtResource("10_635kx")
bus = &"player_movement"

[node name="Wall" type="AudioStreamPlayer" parent="SoundManager/Movement/Dash"]
stream = ExtResource("11_i6b7g")
bus = &"player_movement"

[node name="Jump" type="Node" parent="SoundManager/Movement"]

[node name="Ground" type="AudioStreamPlayer" parent="SoundManager/Movement/Jump"]
stream = ExtResource("12_f8xjn")
bus = &"player_movement"

[node name="Coyote" type="AudioStreamPlayer" parent="SoundManager/Movement/Jump"]
stream = ExtResource("13_d50lt")
bus = &"player_movement"

[node name="MidAir" type="AudioStreamPlayer" parent="SoundManager/Movement/Jump"]
stream = ExtResource("14_y1g2t")
bus = &"player_movement"

[node name="Wall" type="AudioStreamPlayer" parent="SoundManager/Movement/Jump"]
stream = ExtResource("15_qpe33")
bus = &"player_movement"

[node name="Behaviour" type="Node" parent="SoundManager"]

[node name="Disabled" type="AudioStreamPlayer" parent="SoundManager/Behaviour"]
stream = ExtResource("16_vaxs0")
bus = &"player_behaviour"

[node name="Assembled" type="AudioStreamPlayer" parent="SoundManager/Behaviour"]
bus = &"player_behaviour"

[node name="Destroyed" type="AudioStreamPlayer" parent="SoundManager/Behaviour"]
bus = &"player_behaviour"

[node name="Timers" type="Node" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
process_callback = 0
wait_time = 0.1
one_shot = true
script = ExtResource("5_jy4sq")

[node name="DashingTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true
script = ExtResource("3_u26qj")
next_dash_treshold = 0.05

[node name="ClimbingTimer" type="Timer" parent="Timers"]
script = ExtResource("4_mvqst")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3hd3")
}

[node name="StateChart" type="Node" parent="."]
script = ExtResource("3_o6cun")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("10_3q06q")

[node name="MovementStates" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_uoeii")
initial_state = NodePath("mid_air")

[node name="on_ground" type="Node" parent="StateChart/ParallelState/MovementStates"]
script = ExtResource("6_gsiui")

[node name="to_coyote" type="Node" parent="StateChart/ParallelState/MovementStates/on_ground"]
script = ExtResource("7_2mu1g")
to = NodePath("../../as_coyote")
event = &"placemant_state/coyote"

[node name="to_air" type="Node" parent="StateChart/ParallelState/MovementStates/on_ground"]
script = ExtResource("7_2mu1g")
to = NodePath("../../mid_air")
event = &"placemant_state/mid_air"

[node name="as_coyote" type="Node" parent="StateChart/ParallelState/MovementStates"]
script = ExtResource("6_gsiui")

[node name="to_wall" type="Node" parent="StateChart/ParallelState/MovementStates/as_coyote"]
script = ExtResource("7_2mu1g")
to = NodePath("../../on_wall")
event = &"placemant_state/wall"

[node name="to_air" type="Node" parent="StateChart/ParallelState/MovementStates/as_coyote"]
script = ExtResource("7_2mu1g")
to = NodePath("../../mid_air")
event = &"placemant_state/mid_air"

[node name="mid_air" type="Node" parent="StateChart/ParallelState/MovementStates"]
script = ExtResource("6_gsiui")

[node name="to_wall" type="Node" parent="StateChart/ParallelState/MovementStates/mid_air"]
script = ExtResource("7_2mu1g")
to = NodePath("../../on_wall")
event = &"placemant_state/wall"

[node name="to_ground" type="Node" parent="StateChart/ParallelState/MovementStates/mid_air"]
script = ExtResource("7_2mu1g")
to = NodePath("../../on_ground")
event = &"placemant_state/ground"

[node name="on_wall" type="Node" parent="StateChart/ParallelState/MovementStates"]
script = ExtResource("6_gsiui")

[node name="to_air" type="Node" parent="StateChart/ParallelState/MovementStates/on_wall"]
script = ExtResource("7_2mu1g")
to = NodePath("../../mid_air")
event = &"placemant_state/mid_air"
delay_seconds = 0.1

[node name="PlayerStates" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("5_uoeii")
initial_state = NodePath("enabled")

[node name="enabled" type="Node" parent="StateChart/ParallelState/PlayerStates"]
script = ExtResource("6_gsiui")

[node name="disable" type="Node" parent="StateChart/ParallelState/PlayerStates/enabled"]
script = ExtResource("7_2mu1g")
to = NodePath("../../disabled")
event = &"player_state/disable"

[node name="disabled" type="Node" parent="StateChart/ParallelState/PlayerStates"]
script = ExtResource("6_gsiui")

[node name="enable" type="Node" parent="StateChart/ParallelState/PlayerStates/disabled"]
script = ExtResource("7_2mu1g")
to = NodePath("../../enabled")
event = &"player_state/enable"

[node name="DebugCanvasLayer" type="CanvasLayer" parent="."]

[node name="Window" type="Window" parent="DebugCanvasLayer"]
position = Vector2i(15, 40)
size = Vector2i(300, 500)
visible = false

[node name="VBoxContainer" type="VBoxContainer" parent="DebugCanvasLayer/Window"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="StateChartDebugger" parent="DebugCanvasLayer/Window/VBoxContainer" instance=ExtResource("16_3mc08")]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
initial_node_to_watch = NodePath("../../../../StateChart")

[node name="debug_info" type="Label" parent="DebugCanvasLayer/Window/VBoxContainer" node_paths=PackedStringArray("target")]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_imhab")
script = SubResource("GDScript_07sij")
target = NodePath("../../../..")

[connection signal="dash" from="." to="SoundManager" method="_on_player_dash"]
[connection signal="jump" from="." to="SoundManager" method="_on_player_jump"]
[connection signal="player_assembled" from="." to="SoundManager" method="_on_player_player_assembled"]
[connection signal="player_destroyed" from="." to="SoundManager" method="_on_player_player_destroyed"]
[connection signal="player_disabled" from="." to="SoundManager" method="_on_player_player_disabled"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/MovementStates/on_ground" to="." method="_on_ground_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/MovementStates/as_coyote" to="." method="_as_coyote_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/MovementStates/mid_air" to="." method="_in_air_state_physics_processing"]
[connection signal="state_physics_processing" from="StateChart/ParallelState/MovementStates/on_wall" to="." method="_on_wall_state_physics_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/PlayerStates/enabled" to="." method="_on_enable_state_entered"]
